[package]
name = "everything_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
env_logger = "0.11.6"
itertools = "0.14.0"
log = "0.4.25"
md5 = "0.7.0"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.139"

[dev-dependencies]
ctor = "0.2.9"
lazy_static = "1.5.0"
